--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+ /* Keyframes for shaking animation */
+ @keyframes shake {
+  0% { transform: translate(0, 0); }
+  25% { transform: translate(-15px, 0); }
+  50% { transform: translate(15px, 0); }
+  75% { transform: translate(-15px, 0); }
+  100% { transform: translate(15px, 0); }
+}
+
+/* Apply shaking animation to the div */
+.shake {
+  animation: shake 0.1s ease-in-out infinite;
+}
